@@ -275,7 +275,7 @@ event_reinit(struct event_base *base)
 
 	if (base->evsel->dealloc != NULL)
 		base->evsel->dealloc(base, base->evbase);
-	base->evbase = evsel->init(base);
+	evbase = base->evbase = evsel->init(base);
 	if (base->evbase == NULL)
 		event_errx(1, "%s: could not reinitialize event mechanism",
 		    __func__);
